# Real_estate_Voice_Agent

./: .gitignore  README.md
client/: index.html
client/css/: style.css
client/js/: app.js
server/: .env.example  INTEGRATION_GUIDE.md  PHASE1_QUICKSTART.md  PHASE1_VERIFICATION.md  PHASE2_IMPLEMENTATION.md  PHASE2_QUICKSTART.md  bot.py  db_init.py  demo_indexing.py  demo_retrieval.py  demo_search.py  demo_storage.py  demo_tools.py  pyproject.toml  test_search_properties.py  test_storage_layer.py
server/config/: __init__.py  database.py  prompts.py  rag.py
server/db/: README.md  __init__.py  models.py  repositories.py  session.py
server/rag/: chunking.py  embeddings.py  indexing.py  qdrant_client.py  retrieval.py
server/storage/brochures/: .metadata.json
server/storage/faqs/: .metadata.json  tmp9g2mqm9u.txt
server/storage/floorplans/: .metadata.json
server/storage_layer/: __init__.py  config.py  manager.py  models.py
server/tools/: __init__.py  search_documents.py  search_properties.py
